# meshell

./: flake.nix  shell.qml
assets/pam.d/: password.conf
cli/: default.nix  flake.nix  pyproject.toml
cli/src/meshell/: __init__.py  parser.py  shell.py
cli/src/meshell/subcommands/: bar.py  lockscreen.py  picker.py  powermenu.py  wallpaper.py
components/: CustomText.qml  CustomWindow.qml  MaterialIcon.qml  ShellWindow.qml
components/animations/: CustomColorAnimation.qml  CustomNumberAnimation.qml
components/bar/: BarGroup.qml  BarItem.qml  BarModule.qml  MultiWidget.qml  WidgetComponent.qml
config/: ColorConfig.qml  Config.qml  LayoutConfig.qml
io/: ColorPicker.qml  MediaPlayers.qml  Notifications.qml  SettingsStorage.qml  SystemUsage.qml  Time.qml  VisibilitiesStorage.qml  Wallpapers.qml
modules/: Exclusions.qml  GlobalSettings.qml  HyprlandShortcuts.qml  Ipc.qml  Settings.qml  ShellWindow.qml  Visibilities.qml
modules/background/: Background.qml  Wallpaper.qml
modules/bar/: Bar.qml
modules/bar/components/: CenterWidget.qml  Clock.qml  ColorPicker.qml  Information.qml  Media.qml  Power.qml  PowerMenu.qml  SystemUsage.qml  Workspaces.qml
modules/bar/components/center/: ColorPicker.qml  Locked.qml  PowerMenu.qml  Workspaces.qml
modules/lock/: Lock.qml  LockBackground.qml  LockSurface.qml  Pam.qml
modules/notifications/: NotificationWrapper.qml  Notifications.qml
