[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "meshell"
requires-python = ">=3.13"
dynamic = ["version"]

[project.scripts]
meshell = "meshell:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
only-include = [
  "src",
]
